PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2011, PHP 5.4.0 RC2

- Core:
  . Fixed bug #60227 (header() cannot detect the multi-line header with 
     CR(0x0D)). (rui)
  . Fixed bug #55874 (GCC does not provide __sync_fetch_and_add on some archs).
    (klightspeed at netspace dot net dot au)
  . Fixed bug #52624 (tempnam() by-pass open_basedir with nonexistent
    directory). (Felipe)
    
- MS SQL:
  . Fixed bug #60267 (Compile failure with freetds 0.91). (Felipe)

- OpenSSL:
  . Fixed bug #60279 (Fixed NULL pointer dereference in
    stream_socket_enable_crypto, case when ssl_handle of session_stream is not
    initialized.) (shm)

- Oracle Database extension (OCI8):
  . Fixed bug #59985 (show normal warning text for OCI_NO_DATA)
    (Chris Jones)

- Output:
  . Fixed bug #60282 (Segfault when using ob_gzhandler() with open buffers).
    (Laruence)
    
- Tidy:
  . Fixed bug #54682 (Tidy::diagnose() NULL pointer dereference).
    (Maksymilian Arciemowicz, Felipe)

-CLI SAPI:
  . Fixed bug #60159 (Router returns false, but POST is not passed to requested
    resource). (Laruence)
  . Fixed bug #55759 (memory leak when using built-in server). (Laruence)

- Improved PHP-FPM SAPI:
  . Enhance error log when the primary script can't be open. FR #60199. (fat)
  . Remove EXPERIMENTAL flag. (fat)
  . Added .phar to default authorized extensions. (fat)


11 Nov 2011, PHP 5.4.0 RC1
- General improvements:
  . Changed silent conversion of array to string to produce a notice. (Patrick)
  . Added class member access on instantiation (e.g. (new foo)->bar()) support.
    (Felipe)

- CLI SAPI:
  . Fixed bug #60112 (If URI does not contain a file, index.php is not served).
    (Laruence)
  . Fixed bug #60115 (memory definitely lost in cli server). (Laruence)
  . Fixed bug #60146 (Last 2 lines of page not being output). (Laruence)